--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,3 +202,33 @@ font-weight: 300px;
     width: 1090px;
     text-align: center;
 }
+.divbtn{
+    text-align: center;
+    margin-top: 32px;  
+}
+.dbtn{
+    background-color: #006A50;
+    color: white;
+    border-radius: 8px;
+    padding: 17px 34px 17px 34px;
+}
+.foot{
+    font-size: 32px;
+    text-align: center;
+    margin-top: 80px;
+}
+.footimg{
+    display: flex;
+    gap: 20px;
+    justify-content: center;  
+}
+.yunus{
+    margin-top: 32px;
+    margin-left: 80px;
+    margin-right: 80px;
+    border: 1px solid white;  
+    border-radius: 16px;
+    background-color: white;
+    padding: 48px 24px 48px 24px;
+    
+}
